--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -115,3 +115,13 @@
         text-decoration: underline;
     }
 }
+
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+.light-mode {
+    background-color: white;
+    color: black;
+}
